--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
     with:
       DOCKER_REPOSITORY_NAME: rubensa
       DOCKER_IMAGE_NAME: ubuntu-tini-wine
-      DOCKER_IMAGE_TAG: latest
+      DOCKER_IMAGE_TAG: 20.04
       DOCKER_IMAGE_PLATFORMS: "linux/amd64"
     secrets: inherit
